--- a/css/falei.css
+++ b/css/falei.css
@@ -2,78 +2,28 @@
 
 /* Estilos gerais */
 body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #ffdbdb; /* Cor de fundo */
+  background-image: url('backg.jpg');
+  background-size: cover; /* Isso garante que a imagem cubra todo o plano de fundo */
+  background-repeat: no-repeat; /* Evita a repetição da imagem */
+  background-attachment: fixed; /* Fixa a imagem de fundo para que ela não role com a página */
 }
 
-.container {
-  max-width: 1068px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-/* Cabeçalho */
 header {
-  background-color: #FFCFFF; /* Cor de fundo do cabeçalho */
-  color: #ffffff; /* Cor do texto no cabeçalho */
+  background-color: #ffcfff00; /* Um tom mais vibrante de rosa */
+  color: #fff; /* Texto em branco */
   padding: 20px 0;
-  text-align: center;
+  text-align: left; /* Centralize o conteúdo do cabeçalho */
 }
 
-header .logo {
-  display: inline-block;
-  width: 80px;
-  height: 80px;
-  background-image: url('amor2.png');
-  background-size: cover;
-  margin-right: 10px;
-}
-
-/* Estilos para a barra de navegação (nav) */
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 0;
-  background: #FFCFFF; /* Cor de fundo da barra de navegação */
-  box-shadow: 0 1px 4px hsl(0 4% 15% / 10%);
-  z-index: 100;
-}
-.nav-container {
-  background-color: #fff; /* Cor de fundo branca */
-  padding: 10px; /* Espaçamento interno */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra */
-  border-radius: 10px; /* Valor de raio para arredondar as bordas */
-}
-
-/* Estilos para o logotipo */
-.logotipo {
-  order: 1;
+.nav-logo img {
   width: 80px;
   height: auto;
-  order: 1;
-  width: 80px;
-  height: 80px;
-  display: block;
-  background-image: url('amor2.png');
-  margin-right: 10px;
-  padding: 10px;
+  object-fit: contain; /* Evita distorção da imagem */
 }
 
 /* Estilos para os links de navegação */
-.nav-links {
-  order: 2;
-  display: flex;
-  gap: 20px;
-}
-
-/* Estilos para os links de navegação (ativos) */
-.nav-link.active {
-  border: 2px solid #443636; /* Cor e largura da borda */
-  border-radius: 5px; /* Borda arredondada */
-  padding: 5px 10px; /* Espaçamento interno para destacar melhor */
+.nav-link {
+  color: #df80fc; /* Rosa brilhante */
 }
 
 /* Estilos para o ícone do carrinho */
