--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,39 @@
-/* Estilos gerais */
+/* Estilos para um visual mais infantil */
 body {
-  font-family: 'Comic Sans MS', cursive, sans-serif;
-  background-color: #ffdbdb; /* Um tom suave de rosa */
-  color: #171427; /* Cor do texto principal */
-  margin: 0;
-  padding: 0;
-  scroll-padding-top: 2rem;
-  scroll-behavior: smooth;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+  background-image: url('backg.jpg');
+  background-size: cover; /* Isso garante que a imagem cubra todo o plano de fundo */
+  background-repeat: no-repeat; /* Evita a repetição da imagem */
+  background-attachment: fixed; /* Fixa a imagem de fundo para que ela não role com a página */
 }
 
-/* Cores personalizadas */
-:root {
-  --main-color: #ff00c8; /* Cor principal, rosa vibrante */
-  --bg-color: #FFCFFF; /* Cor de fundo, branco */
-  --text-color: #171427; /* Cor do texto principal, preto */
+/* Cabeçalho */
+header {
+  background-color: #ffcfff00; /* Um tom mais vibrante de rosa */
+  color: #fff; /* Texto em branco */
+  padding: 20px 0;
+  text-align: left; /* Centralize o conteúdo do cabeçalho */
 }
 
-/* Definições de imagem */
-img {
-  max-width: 100%;
+
+/* Logo com um estilo lúdico */
+.nav-logo img {
+  width: 80px;
   height: auto;
+  object-fit: contain; /* Evita distorção da imagem */
 }
 
-/* Container principal */
-.container {
-  max-width: 1068px;
-  margin: auto;
-  width: 100%;
-  padding: 0 20px;
-}
+
 
 /* Seção principal */
 section {
   padding: 4rem 0 3rem;
 }
 
-/* Cabeçalho */
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: var(--bg-color);
-  box-shadow: 0 1px 4px hsl(0 4% 15% / 10%);
-  z-index: 100;
-}
 
-/* Barra de navegação */
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 0;
-}
-
-/* Logo */
-.nav-logo {
-  order: 1;
-  width: 60px;
-  height: auto;
-}
 
 /* Links de navegação */
-.nav-links {
-  order: 2;
-  display: flex;
-  gap: 20px;
+.nav-link {
+  color: #df80fc; /* Rosa brilhante */
 }
 
 /* Ícone do Carrinho */
